--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>My Portfolio Project</title>
   </head>
   <body>
-    <header>
-      <h1>let's Introduce Myself.</h1>
-    </header>
+    <header></header>
   </body>
 </html>
