--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body class="open-sans-normal">
-    <header>
+    <!-- Header starts here -->
+    <header class="header">
+      <!-- navbar starts here -->
       <nav>
         <h2 class="nav-title">Sha<span class="text-primary">k</span>if</h2>
 
@@ -26,6 +28,25 @@
           </li>
         </ul>
       </nav>
+      <!-- navbar ends here -->
+
+      <!-- banner starts here -->
+      <div class="banner">
+        <div class="banner-content">
+          <h4 class="banner-greetings dark-2">Hi, I am</h4>
+          <h1 class="banner-title">Mary Hardy</h1>
+          <p class="banner-description">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            <br />
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">Contact</button>
+        </div>
+        <img src="../images/Hardy.png" alt="" />
+      </div>
+      <!-- banner ends here -->
     </header>
+    <!-- Header ends here -->
   </body>
 </html>
