--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header starts here -->
     <header class="header">
       <!-- navbar starts here -->
-      <nav>
+      <nav class="secondary-bg">
         <h2 class="nav-title">Sha<span class="text-primary">k</span>if</h2>
 
         <ul>
@@ -31,7 +31,7 @@
       <!-- navbar ends here -->
 
       <!-- banner starts here -->
-      <div class="banner">
+      <div class="banner secondary-bg">
         <div class="banner-content">
           <h4 class="banner-greetings dark-2">Hi, I am</h4>
           <h1 class="banner-title">Mary Hardy</h1>
@@ -48,5 +48,22 @@
       <!-- banner ends here -->
     </header>
     <!-- Header ends here -->
+
+    <!-- Main starts here -->
+    <main class="secondary-bg">
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and <br />
+          slick websites that provide real value to the end user. Thousands of
+          clients have procured <br />
+          exceptional resulfs while working with me. Delivering work within time
+          and budget which meets <br />
+          clients requirements in our mata.
+        </p>
+      </section>
+    </main>
+    <!-- Main ends here -->
   </body>
 </html>
